--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@
 @import url(https://fonts.googleapis.com/css?family=Fredericka+the+Great|Lato);
 
 body {
-  background-color: #5f5345;
+  background-color: darkblue;
 }
  
 .pageContainer {
@@ -39,13 +39,13 @@ img {
 h1 {
   font-family: 'Fredericka the Great', cursive;
   font-size: 64px;
-  color: #8b1b00;
+  color: firebrick;
 }
  
 p, li {
   font-family: 'Lato', sans-serif;
   font-size: 22px;
-  color: #51473b;
+  color: cornflowerblue;
 }
 
 
